# hiven.py

./: README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/stylesheets/: palette.css
hiven/: __init__.py  client.py  data.py  util.py
hiven/core/: __init__.py  command.py  context.py  parsers.py
hiven/errors/: __init__.py  base.py  command.py  event.py  websocket.py
hiven/gateway/: __init__.py  http.py  websocket.py
hiven/schemas/: __init__.py  attachment.py  default_permission_override.py  entity.py  house.py  member.py  message.py  room.py
hiven/types/: __init__.py  attachment.py  channel_emoji.py  default_permission_override.py  entity.py  house.py  member.py  message.py  permission_override.py  resource_pointer.py  role.py  room.py  user.py
hiven/websocket/: WebSocketClient.py  __init__.py
hiven/websocket/schemas/: __init__.py  channel_emoji.py  emoji.py  house.py  member.py  permission_override.py  resource_pointer.py  role.py  room.py  user.py
hiven/websocket/types/: __init__.py  channel_emoji.py  emoji.py  entity.py  house.py  member.py  resource_pointer.py  room.py  user.py
